[package]
name = "juno-starknet-rs"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.160"
serde_json = "1.0.96"
starknet-rs = { git = "https://github.com/lambdaclass/starknet_in_rust", rev = "ad6a494d71112c363bd35e95df2b92f39b3430ce" }
cairo-lang-starknet = { git = "https://github.com/starkware-libs/cairo", rev = "4afacfd574de1121d61dea28f8c73e1516c7e07d"}
cairo-vm = { git = "https://github.com/lambdaclass/cairo-rs", features = ["cairo-1-hints"] }

[lib]
crate-type = ["cdylib", "staticlib"]
