[package]
name = "juno-starknet-rs"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.160"
serde_json = "1.0.96"
blockifier = {git = "https://github.com/starkware-libs/blockifier", rev = "f2d237b"}
starknet_api = { git = "https://github.com/starkware-libs/starknet-api", rev = "24a7249" }

[lib]
crate-type = ["staticlib"]
