[package]
name = "juno-starknet-rs"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.160"
serde_json = "1.0.96"
blockifier = {git = "https://github.com/starkware-libs/blockifier", rev = "253021c"}
starknet_api = { git = "https://github.com/starkware-libs/starknet-api", rev = "7a1d4a8" }
cairo-vm = "0.5.1"
cairo-lang-casm = { git = "https://github.com/starkware-libs/cairo", rev = "e71724e4" }
cairo-lang-starknet = { git = "https://github.com/starkware-libs/cairo", rev = "e71724e4" }

[lib]
crate-type = ["staticlib"]
